[package]
name = "frost-adaptor-signature"
version = "0.1.1-dev9"
edition = "2021"
description = "An extention of frost"
readme = "README.md"
repository = "https://github.com/sideprotocol/frost-adaptor-signature.git"
license = "MIT OR Apache-2.0"

[dependencies]
frost-core = { version="2.1.0", features = ["internals"] }
frost-secp256k1-tr = {version="2.1.0"}

k256 = { version = "0.13.4", features = ["arithmetic", "expose-field", "hash2curve", "serde"] }
serde = { version = "1.0.218", features = ["derive"], optional = true }
rand_core = "0.9.3"
sha2 = "0.10.2"
secp256k1 = "0.30.0"

[features]
cheater-detection = ["frost-core/cheater-detection", "frost-secp256k1-tr/cheater-detection" ]
serialization = ["frost-core/serialization", "frost-secp256k1-tr/serialization"]
serde = ["dep:serde", "k256/serde", "frost-core/serde", "frost-secp256k1-tr/serde"]
